Fixes spacing of the header title and close button on the wizard modal

--- a/assets/admin/editor-wizard/style.scss
+++ b/assets/admin/editor-wizard/style.scss
@@ -30,6 +30,7 @@
 		border-bottom: 0;
 		padding: 30px;
 		height: auto;
+		margin: auto;
 
 		& .components-modal__header-heading {
 			font-size: 32px;
